# MIND

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
BE-mh-narrative-dashboard/: .gitignore  README.md  conversation_123.json  data_fact_taxonomy.py  execution_plan.json  main.py  pyproject.toml  questions.json  requirements.txt  run_pipeline.py  test.json  test.py  visualizer.py
BE-mh-narrative-dashboard/MIND_types/: __init__.py  activity_type.py  analyzer_numeric_type.py  analyzer_text_type.py  discoverer_numeric_type.py  discoverer_text_type.py  encounter_type.py  medication_type.py  narrator_type.py  synthesizer_type.py  transcript_type.py
BE-mh-narrative-dashboard/analyzer/: analyzer.py  inquirer.py  planner.py
BE-mh-narrative-dashboard/data/: INS-W_4_bluetooth_allday.csv  INS-W_4_bluetooth_finest.csv  INS-W_4_call_allday.csv  INS-W_4_call_finest.csv  INS-W_4_location_allday.csv  INS-W_4_location_finest.csv  INS-W_4_screen_allday.csv  INS-W_4_screen_finest.csv  INS-W_4_sleep_allday.csv  INS-W_4_sleep_finest.csv  INS-W_4_steps_allday.csv  INS-W_4_steps_finest.csv  INS-W_4_survey_panas.csv  INS-W_4_survey_phq4.csv  INS-W_4_survey_pss4.csv  INS-W_4_wifi_allday.csv  INS-W_4_wifi_finest.csv
BE-mh-narrative-dashboard/discoverer/: __init__.py  data_modalities.py  discoverer.py  discoverer_class.py  planner.py
BE-mh-narrative-dashboard/generate_mock_data/: INS-W_963_clinician_session.json  INS-W_963_combined_transcript.json  INS-W_963_patient_session.json  README.md  combined_transcript.json  conseling_session_generation.py  exec.sh  (+11 more)
(+288 files in other folders)
